--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1027,6 +1027,30 @@ Držitel šlechtitelských práv v ČR: Ing. Miloš Michlovský.\n\n
         Zdroje informací: \n www.znalecvin.cz, hledamvino.cz, www.vinoadestilaty.cz, www.vinazmoravyvinazcech.cz, Wikipedie, publikace: Vše, co byste měli vědět o víně…a nemáte se koho zeptat, Průvodce vínem 2014-2015
     </string>
 
+    <!--TRAMÍN ČERVENÝ-->
+
+    <string name="barva_tramincerveny">Žlutozelená.</string>
+    <string name="vune_tramincerveny">Pikantní, travnatá, angreštová, mírně kořenitá. Dále dostáváme květy akátu, mineralitu a vegetální tóny.</string>
+    <string name="chut_tramincerveny">Plná, extraktivní, mírně kořenitá, neutrální, v mládí s vyšší kyselinkou. </string>
+    <string name="stolovani_tramincerveny">Vína jsou výborná pro společenské události, neboť jejich pití neunavuje. Jsou to neutrální vína, která nenarušují chuť jemných jídel. Vhodná jsou
+        k pokrmům z králíka, k drůbeži či vepřovému masu, předkrmům a smetanové omáčce.</string>
+    <string name="popis_tramincerveny">Sylvánské zelené je bílá, moštová, starobylá středoevropská odrůda. Do Státní odrůdové knihy ČR zapsaná v r. 1941. Její původ sahá do římských dob a
+        pravděpodobně patřila do okruhu odrůd známých jako „Heunisch„. Postupem času došlo k samovolným mutacím a opylení s ostatními původními odrůdami. V dnešní době genetické studie uvádí
+        původ odrůdy ze samovolného opylení Tramínu červeného x Rakouské bílé, což částečný původ „Hunnic“ nepopírá. V Německu je odrůdou Sylvánské zelené/Silvaner osázeno přes 5 tis. ha a je
+        třetí nejrozšířenější bílou odrůdou za RR a MT. V ČR se pěstuje pouze na 117 ha.\n
+        Hrozen je většinou středně velký, válcový až kuželový, hustý. Bobule středně velká kulatá, zelenožlutá. Dužnina měkká, v chuti nevýrazná.\n
+        Víno mívá vyšší kyseliny, hlavně při nižší cukernatosti. Při větších sklizních jsou mladá vína tvrdá a hrubá. Kyseliny se ale rychle odbourávají a víno může být až fádní. ještě v
+        období mezi válkami sloužilo víno z odrůdy Sylvánské zelené jako běžné, suché, stolní víno k všedním jídlům. Potom odrůdu ze stolů vytlačilo Neuburské a obě dvě Müller Thurgau. Ve
+        vůni jsou chrakterem bylinky, pomeranč, zelené a žluté jablko, v chuti citrusy a banány.\n
+        Povolené synonymum: Sylvánské, Grüner Silvaner.\n
+        Starobylé a původní názvy: Morávka.\n\n
+        Zkratka: SZ\n\n
+        Držitel šlechtitelských práv v ČR: není\n
+        Udržovatel odrůdy v ČR: 605 Šlechtitelská stanice vinařská, s.r.o. 687 37 Polešovice 634, 629 VÚRV Praha-Ruzyně, Výzkumná stanice vinařská 267 18 Karlštejn 98, 749 Ing. Alois Tománek,
+        687 09 Boršice 671, 982 AMPELOS, ŠLECHTITELSKÁ STANICE VINAŘSKÁ ZNOJMO, a.s. 671 24 Vrbovec 274.\n\n
+        Zdroje informací: \n www.znalecvin.cz, hledamvino.cz, www.vinoadestilaty.cz, www.vinazmoravyvinazcech.cz, Wikipedie, publikace: Vše, co byste měli vědět o víně…a nemáte se koho zeptat, Průvodce vínem 2014-2015
+    </string>
+
 
 
 
